Kubernets/HelloWorlds/Accessing/ingress/service-goku.yaml
apiVersion: v1
kind: Service
metadata:
  name: goku-service
spec:
 # type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: goku
